--- a/apps/kyynk/package.json
+++ b/apps/kyynk/package.json
@@ -61,6 +61,8 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@sanity/client": "^6.11.1",
     "@sanity/image-url": "^1.0.2",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/supabase-js": "^2.50.3",
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-query": "^5.64.2",
@@ -118,6 +120,7 @@
     "sass": "^1.69.7",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.3",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
